--- a/pag.css
+++ b/pag.css
@@ -8,7 +8,7 @@
 }
 
 .light-mode:root {
-  --background-color: yellow;
+  --background-color: whitesmoke;
   --font-color: black;
   --border-color: black;
   --backgorud-gifs: #f0f0f0;
