--- a/pag.css
+++ b/pag.css
@@ -11,7 +11,7 @@
   --background-color: whitesmoke;
   --font-color: black;
   --border-color: black;
-  --backgorud-gifs: #f0f0f0;
+  --backgorud-gifs: lightgrey;
   --titulo: red;
 }
 
@@ -36,24 +36,28 @@ header {
   border-radius: 40px;
 }
 .caixa {
+  margin-right: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
+
+.caixa i {
+  display: none;
+  align-content: center;
+  color: var(--font-color);
+  cursor: pointer;
+}
+
 .caixa li {
   display: inline-block;
-  margin: 0 20px;
+  margin: 0px 0px 0px 20px;
   transition: 0.1s;
+  flex-wrap: wrap;
 }
 .caixa li:hover {
   transition: 0.5s;
   transform: scale(1.4);
-}
-nav i {
-  align-content: center;
-  color: var(--font-color);
-  
 }
 
 .caixa li a {
@@ -105,6 +109,7 @@ nav i {
   border: solid 1px var(--font-color);
   border-radius: 15px;
   transition: 200ms;
+  box-shadow: 5px 8px 0 3px var(--border-color);
 }
 .elementos:hover {
   transform: scale(1.2);
@@ -114,6 +119,7 @@ nav i {
   align-content: center;
   width: 270px;
   height: 300px;
+  border-radius: 10px;
 }
 .tituloGif {
   /* border: 1px green solid; */
@@ -204,8 +210,19 @@ label i {
   color: var(--background-color);
 }
 .fa-moon {
-  color: darkblue;
+  color: var(--titulo);
 }
 .fa-sun {
-  color: yellow;
+  color: var(--background-color);
+}
+
+/* ------------------------------- SMARTHONE ----------------------------------------- */
+
+@media (max-width: 600px) {
+  .caixa i {
+    justify-content: center;
+    align-content: center;
+    color: var(--font-color);
+    cursor: pointer;
+  }
 }
