--- a/pag.css
+++ b/pag.css
@@ -218,11 +218,26 @@ label i {
 
 /* ------------------------------- SMARTHONE ----------------------------------------- */
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
+ 
+  .caixa{
+    margin-right: 10;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+  }
   .caixa i {
-    justify-content: center;
-    align-content: center;
+    font-size: 45px;
+    display: inline-block;
     color: var(--font-color);
     cursor: pointer;
   }
+  .caixa nav{
+    display: none;
+  }
+  .caixa img{
+    display: inline-block;
+  }
+  
+
 }
