--- a/pag.css
+++ b/pag.css
@@ -27,16 +27,16 @@ body {
 /* -------------------------------- HEADER ---------------------------------- */
 
 header {
-  padding: 20px;
+  height: 25%;
   background-color: var(--background-color);
   border-bottom: 5px groove var(--border-color);
 }
 .logo {
+  display: inline-block;
   width: 140px;
-  border-radius: 40px;
+  padding: 20px;
 }
 .caixa {
-  margin-right: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,7 +46,7 @@ header {
   display: none;
 }
 .Sites {
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 .caixa i {
@@ -57,10 +57,12 @@ header {
 }
 
 .caixa li {
+  justify-content: center;
+  align-items: center;
   display: inline-block;
   margin: 0px 0px 0px 30px;
   transition: 0.1s;
-  flex-wrap: wrap;
+
 }
 .caixa li:hover {
   transition: 0.5s;
@@ -69,7 +71,7 @@ header {
 
 .caixa li a {
   position: relative;
-  font-size: 25px;
+  font-size: 28px;
   color: var(--font-color);
   text-decoration: none;
   font-weight: bold;
@@ -269,7 +271,7 @@ footer .fa-sun {
   }
 
   .desativado {
-    left: 100%;
+    left: 0%;
     transition: 1s;
   }
 
@@ -279,7 +281,7 @@ footer .fa-sun {
     width: 100%;
     height: 100vh;
     top: 20vh;
-    left: 0%;
+    left: 100%;
     text-align: center;
     background-color: var(--background-color);
     transition: 1s;
